@@ -1,5 +1,12 @@
+%define fc4_build 0
+
+%if ! %{fc4_build}
+%define gtk2_version 2.7.4
+%define pygtk2_version 2.7.1
+%else
 %define gtk2_version 2.6.0
 %define pygtk2_version 2.5.3-2
+%endif
 %define gnome_python2_version 2.6.0-5
 
 %define pyver %(python -c 'import sys ; print sys.version[:3]')
@@ -176,6 +183,7 @@ fi
 - Remove sabayon-monitor and monitorwindow.py
 - Icon is now installed in the icon theme; update the
   icon cache in %post and %postun
+- Require pygtk 2.7.1 in FC5 for MessageDialog fix (gnome #311226)
 
 * Wed May 18 2005 Mark McLoughlin <markmc@redhat.com> - 0.18-1
 - Update to 0.18
